[package]
name = "neon-rust"
version = "0.1.0"
authors = ["FlareonTheProgrammer"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "easyttv_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
rand = "0.5.5"
ferris-says = "0.1"